/*
Overview of what myapa is etc..
*/
syntax = "proto3";

/*
Additional overview of what myapa is etc..
*/
package istio.mixer.adapter.MyApa;

import "mixer/adapter/model/v1beta1/extensions.proto";
import "policy/v1beta1/type.proto";

option (istio.mixer.adapter.model.v1beta1.template_variety) = TEMPLATE_VARIETY_ATTRIBUTE_GENERATOR;

/* myapa template is ..
*/
message Template {
    int64 int64Primitive = 1;

    bool boolPrimitive = 2;

    double doublePrimitive = 3;

    string stringPrimitive = 4;

    map<string, int64> dimensionsFixedInt64ValueDType = 5;

    istio.policy.v1beta1.TimeStamp timeStamp = 6;

    istio.policy.v1beta1.Duration duration = 7;

    map<string, Resource3> res3_map = 8;
}

message OutputTemplate {

    int64 int64Primitive = 1;

    bool boolPrimitive = 2;

    double doublePrimitive = 3;

    string stringPrimitive = 4;

    istio.policy.v1beta1.TimeStamp timeStamp = 6;

    istio.policy.v1beta1.Duration duration = 7;
}


message Resource1 {
    string str = 1;
    istio.mixer.adapter.MyApa.Resource1 self_ref_res1 = 3;
    Resource2 resRef2 = 2;
}

message Resource2 {
    string str = 1;
    Resource3 res3 = 2;
    map<string, Resource3> res3_map = 3;
}

// resource3 comment
message Resource3 {

    int64 int64Primitive = 1;

    bool boolPrimitive = 2;

    double doublePrimitive = 3;

    string stringPrimitive = 4;

    map<string, int64> dimensionsFixedInt64ValueDType = 5;

    istio.policy.v1beta1.TimeStamp timeStamp = 6;

    istio.policy.v1beta1.Duration duration = 7;
}
